--- a/Main_Paper.bib
+++ b/Main_Paper.bib
@@ -175,7 +175,7 @@ archivePrefix = {arXiv},
 }
 
 @article{Willett_2013,
-   title={Galaxy Zoo 2: detailed morphological classifications for 304 122 galaxies from the Sloan Digital Sky Survey},
+   title={Galaxy Zoo 2: detailed morphological classifications for 304 122 galaxies from the Sloan Digital Sky Survey},
    volume={435},
    ISSN={0035-8711},
    url={http://dx.doi.org/10.1093/mnras/stt1458},
@@ -300,7 +300,7 @@ archivePrefix = {arXiv},
     pages = {820-827},
     year = {2015},
     month = {03},
-    abstract = "{We measure the stellar mass–star formation rate (SFR) relation in star-forming disc galaxies at z ≤ 0.085, using Galaxy Zoo morphologies to examine different populations of spirals as classified by their kiloparsec-scale structure. We examine the number of spiral arms, their relative pitch angle, and the presence of a galactic bar in the disc, and show that both the slope and dispersion of the M⋆–SFR relation is constant when varying all the above parameters. We also show that mergers (both major and minor), which represent the strongest conditions for increases in star formation at a constant mass, only boost the SFR above the main relation by ∼0.3 dex; this is significantly smaller than the increase seen in merging systems at z \\&gt; 1. Of the galaxies lying significantly above the M⋆–SFR relation in the local Universe, more than 50 per cent are mergers. We interpret this as evidence that the spiral arms, which are imperfect reflections of the galaxy's current gravitational potential, are either fully independent of the various quenching mechanisms or are completely overwhelmed by the combination of outflows and feedback. The arrangement of the star formation can be changed, but the system as a whole regulates itself even in the presence of strong dynamical forcing.}",
+    abstract = "{We measure the stellar mass–star formation rate (SFR) relation in star-forming disc galaxies at z ≤ 0.085, using Galaxy Zoo morphologies to examine different populations of spirals as classified by their kiloparsec-scale structure. We examine the number of spiral arms, their relative pitch angle, and the presence of a galactic bar in the disc, and show that both the slope and dispersion of the M⋆–SFR relation is constant when varying all the above parameters. We also show that mergers (both major and minor), which represent the strongest conditions for increases in star formation at a constant mass, only boost the SFR above the main relation by ∼0.3 dex; this is significantly smaller than the increase seen in merging systems at z \\&gt; 1. Of the galaxies lying significantly above the M⋆–SFR relation in the local Universe, more than 50 per cent are mergers. We interpret this as evidence that the spiral arms, which are imperfect reflections of the galaxy's current gravitational potential, are either fully independent of the various quenching mechanisms or are completely overwhelmed by the combination of outflows and feedback. The arrangement of the star formation can be changed, but the system as a whole regulates itself even in the presence of strong dynamical forcing.}",
     issn = {0035-8711},
     doi = {10.1093/mnras/stv307},
     url = {https://doi.org/10.1093/mnras/stv307},
@@ -395,14 +395,14 @@ archivePrefix = {arXiv},
 
 @article{Simmons2016CANDLES,
     author = {Simmons, B. D. and Lintott, Chris and Willett, Kyle W. and Masters, Karen L. and Kartaltepe, Jeyhan S. and Häußler, Boris and Kaviraj, Sugata and Krawczyk, Coleman and Kruk, S. J. and McIntosh, Daniel H. and Smethurst, R. J. and Nichol, Robert C. and Scarlata, Claudia and Schawinski, Kevin and Conselice, Christopher J. and Almaini, Omar and Ferguson, Henry C. and Fortson, Lucy and Hartley, William and Kocevski, Dale and Koekemoer, Anton M. and Mortlock, Alice and Newman, Jeffrey A. and Bamford, Steven P. and Grogin, N. A. and Lucas, Ray A. and Hathi, Nimish P. and McGrath, Elizabeth and Peth, Michael and Pforr, Janine and Rizer, Zachary and Wuyts, Stijn and Barro, Guillermo and Bell, Eric F. and Castellano, Marco and Dahlen, Tomas and Dekel, Avishai and Ownsworth, Jamie and Faber, Sandra M. and Finkelstein, Steven L. and Fontana, Adriano and Galametz, Audrey and Grützbauch, Ruth and Koo, David and Lotz, Jennifer and Mobasher, Bahram and Mozena, Mark and Salvato, Mara and Wiklind, Tommy},
-    title = "{Galaxy Zoo: quantitative visual morphological classifications for 48 000 galaxies from CANDELS★}",
+    title = "{Galaxy Zoo: quantitative visual morphological classifications for 48 000 galaxies from CANDELS★}",
     journal = {Monthly Notices of the Royal Astronomical Society},
     volume = {464},
     number = {4},
     pages = {4420-4447},
     year = {2016},
     month = {10},
-    abstract = "{We present quantified visual morphologies of approximately 48 000 galaxies observed in three Hubble Space Telescope legacy fields by the Cosmic Assembly Near-infrared Deep Extragalactic Legacy Survey (CANDELS) and classified by participants in the Galaxy Zoo project. 90 per cent of galaxies have z ≤ 3 and are observed in rest-frame optical wavelengths by CANDELS. Each galaxy received an average of 40 independent classifications, which we combine into detailed morphological information on galaxy features such as clumpiness, bar instabilities, spiral structure, and merger and tidal signatures. We apply a consensus-based classifier weighting method that preserves classifier independence while effectively down-weighting significantly outlying classifications. After analysing the effect of varying image depth on reported classifications, we also provide depth-corrected classifications which both preserve the information in the deepest observations and also enable the use of classifications at comparable depths across the full survey. Comparing the Galaxy Zoo classifications to previous classifications of the same galaxies shows very good agreement; for some applications, the high number of independent classifications provided by Galaxy Zoo provides an advantage in selecting galaxies with a particular morphological profile, while in others the combination of Galaxy Zoo with other classifications is a more promising approach than using any one method alone. We combine the Galaxy Zoo classifications of ‘smooth’ galaxies with parametric morphologies to select a sample of featureless discs at 1 ≤ z ≤ 3, which may represent a dynamically warmer progenitor population to the settled disc galaxies seen at later epochs.}",
+    abstract = "{We present quantified visual morphologies of approximately 48 000 galaxies observed in three Hubble Space Telescope legacy fields by the Cosmic Assembly Near-infrared Deep Extragalactic Legacy Survey (CANDELS) and classified by participants in the Galaxy Zoo project. 90 per cent of galaxies have z ≤ 3 and are observed in rest-frame optical wavelengths by CANDELS. Each galaxy received an average of 40 independent classifications, which we combine into detailed morphological information on galaxy features such as clumpiness, bar instabilities, spiral structure, and merger and tidal signatures. We apply a consensus-based classifier weighting method that preserves classifier independence while effectively down-weighting significantly outlying classifications. After analysing the effect of varying image depth on reported classifications, we also provide depth-corrected classifications which both preserve the information in the deepest observations and also enable the use of classifications at comparable depths across the full survey. Comparing the Galaxy Zoo classifications to previous classifications of the same galaxies shows very good agreement; for some applications, the high number of independent classifications provided by Galaxy Zoo provides an advantage in selecting galaxies with a particular morphological profile, while in others the combination of Galaxy Zoo with other classifications is a more promising approach than using any one method alone. We combine the Galaxy Zoo classifications of ‘smooth’ galaxies with parametric morphologies to select a sample of featureless discs at 1 ≤ z ≤ 3, which may represent a dynamically warmer progenitor population to the settled disc galaxies seen at later epochs.}",
     issn = {0035-8711},
     doi = {10.1093/mnras/stw2587},
     url = {https://doi.org/10.1093/mnras/stw2587},
@@ -411,7 +411,7 @@ archivePrefix = {arXiv},
 
 @article{Willet2016HST,
     author = {Willett, Kyle W. and Galloway, Melanie A. and Bamford, Steven P. and Lintott, Chris J. and Masters, Karen L. and Scarlata, Claudia and Simmons, B. D. and Beck, Melanie and Cardamone, Carolin N. and Cheung, Edmond and Edmondson, Edward M. and Fortson, Lucy F. and Griffith, Roger L. and Häußler, Boris and Han, Anna and Hart, Ross and Melvin, Thomas and Parrish, Michael and Schawinski, Kevin and Smethurst, R. J. and Smith, Arfon M.},
-    title = "{Galaxy Zoo: morphological classifications for 120 000 galaxies in HST legacy imaging★}",
+    title = "{Galaxy Zoo: morphological classifications for 120 000 galaxies in HST legacy imaging★}",
     journal = {Monthly Notices of the Royal Astronomical Society},
     volume = {464},
     number = {4},
@@ -617,13 +617,14 @@ archivePrefix = {arXiv},
 }
 
 @article{dai2018galaxy,
-    title={Galaxy Morphology Classification with Deep Convolutional Neural Networks},
-    author={Jia-Ming Dai and Jizhou Tong},
-    year={2018},
-    eprint={1807.10406},
-    archivePrefix={arXiv},
-    journal = {Monthly Notices of the Royal Astronomical Society},
-    primaryClass={astro-ph.GA}
+  title={Galaxy morphology classification with deep convolutional neural networks},
+  author={Zhu, Xiao-Pan and Dai, Jia-Ming and Bian, Chun-Jiang and Chen, Yu and Chen, Shi and Hu, Chen},
+  journal={Astrophysics and Space Science},
+  volume={364},
+  number={4},
+  pages={55},
+  year={2019},
+  publisher={Springer}
 }
 
 @article{mcculloch1943logical,
@@ -845,3 +846,121 @@ publisher = {Curran Associates, Inc.}
   biburl    = {https://dblp.org/rec/journals/corr/abs-1905-11946.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@ARTICLE{1963ApJS....8...31D,
+       author = {{de Vaucouleurs}, G.},
+        title = "{Revised Classification of 1500 Bright Galaxies.}",
+      journal = {\apjs},
+         year = 1963,
+        month = apr,
+       volume = {8},
+        pages = {31},
+          doi = {10.1086/190084},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1963ApJS....8...31D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{1996ApJS..107....1A,
+       author = {{Abraham}, Roberto G. and {van den Bergh}, Sidney and {Glazebrook}, Karl and {Ellis}, Richard S. and {Santiago}, Basilio X. and {Surma}, Peter and {Griffiths}, Richard E.},
+        title = "{The Morphologies of Distant Galaxies. II. Classifications from the Hubble Space Telescope Medium Deep Survey}",
+      journal = {\apjs},
+     keywords = {GALAXIES: EVOLUTION, GALAXIES: FUNDAMENTAL PARAMETERS, GALAXIES: INTERACTIONS, SURVEYS},
+         year = 1996,
+        month = nov,
+       volume = {107},
+        pages = {1},
+          doi = {10.1086/192352},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1996ApJS..107....1A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Conselice_2000,
+   title={The Asymmetry of Galaxies: Physical Morphology for Nearby and High‐Redshift Galaxies},
+   volume={529},
+   ISSN={1538-4357},
+   url={http://dx.doi.org/10.1086/308300},
+   DOI={10.1086/308300},
+   number={2},
+   journal={The Astrophysical Journal},
+   publisher={American Astronomical Society},
+   author={Conselice, Christopher J. and Bershady, Matthew A. and Jangren, Anna},
+   year={2000},
+   month={Feb},
+   pages={886–910}
+}
+
+
+
+@article{abraham1996b,
+    author = {Abraham, R. G. and Tanvir, N. R. and Santiago, B. X. and Ellis, R. S. and Glazebrook, K. and Bergh, S. van den},
+    title = "{Galaxy morphology to I=25 mag in the Hubble Deep Field}",
+    journal = {Monthly Notices of the Royal Astronomical Society},
+    volume = {279},
+    number = {3},
+    pages = {L47-L52},
+    year = {1996},
+    month = {04},
+    abstract = "{The morphological properties of galaxies in the range 21 \\&lt; I \\&lt; 25 mag in the Hubble Deep Field are investigated using a quantitative classification system based on measurements of the central concentration and asymmetry of galaxian light. The class distribution of objects in the Hubble Deep Field is strongly skewed towards highly asymmetric objects, relative to distributions from both the HST Medium Deep Survey at I\\&lt;22 mag and an artificially redshifted sample of local galaxies. The steeply rising number count-magnitude relation for irregular/peculiar/merging systems at I \\&lt; 22 mag reported by Glazebrook et al. continues to at least I = 25 mag. Although these peculiar systems are predominantly blue at optical wavelengths, a significant fraction also exhibit red U–B colours, which may indicate that they are at high redshift. Beyond Glazebrook et al.'s magnitude limit, the spiral counts appear to rise more steeply than high-normalization no-evolution predictions, whereas those of elliptical/S0 galaxies only slightly exceed such predictions and may turn over beyond I ∼ 24 mag. These results are compared with those from previous investigations of faint galaxy morphology with HST, and the possible implications are briefly discussed. The large fraction of peculiar/irregular/merging systems in the Hubble Deep Field suggests that by I ∼ 25 mag the conventional Hubble system no longer provides an adequate description of the morphological characteristics of a high fraction of field galaxies.}",
+    issn = {0035-8711},
+    doi = {10.1093/mnras/279.3.L47},
+    url = {https://doi.org/10.1093/mnras/279.3.L47},
+    eprint = {https://academic.oup.com/mnras/article-pdf/279/3/L47/2901913/279-3-L47.pdf},
+}
+
+@InProceedings{okamura1994,
+author="Okamura, S.
+and Doi, M.
+and Fukugita, M.
+and Kashikawa, N.
+and Sekiguchi, M.
+and Shimasaku, K.
+and Yasuda, N.",
+editor="MacGillivray, H. T.
+and Thomson, E. B.
+and Lasker, B. M.
+and Reid, I. N.
+and Malin, D. F.
+and West, R. M.
+and Lorenz, H.",
+title="Automatic Morphological Classification of Galaxies",
+booktitle="Astronomy from Wide-Field Imaging",
+year="1994",
+publisher="Springer Netherlands",
+address="Dordrecht",
+pages="243--247",
+abstract="We study the performance and limitations of the morphological classification method based on luminosity concentration and mean surface brightness. In particular, the effects of the different colour bands and of a finite seeing are investigated.",
+isbn="978-94-011-1146-1"
+}
+
+@article{Conselice_2003,
+   title={The Relationship between Stellar Light Distributions of Galaxies and Their Formation Histories},
+   volume={147},
+   ISSN={1538-4365},
+   url={http://dx.doi.org/10.1086/375001},
+   DOI={10.1086/375001},
+   number={1},
+   journal={The Astrophysical Journal Supplement Series},
+   publisher={American Astronomical Society},
+   author={Conselice, Christopher J.},
+   year={2003},
+   month={Jul},
+   pages={1–28}
+}
+
+@InProceedings{zeilar2014,
+author="Zeiler, Matthew D.
+and Fergus, Rob",
+editor="Fleet, David
+and Pajdla, Tomas
+and Schiele, Bernt
+and Tuytelaars, Tinne",
+title="Visualizing and Understanding Convolutional Networks",
+booktitle="Computer Vision -- ECCV 2014",
+year="2014",
+publisher="Springer International Publishing",
+address="Cham",
+pages="818--833",
+abstract="Large Convolutional Network models have recently demonstrated impressive classification performance on the ImageNet benchmark Krizhevsky et al. [18]. However there is no clear understanding of why they perform so well, or how they might be improved. In this paper we explore both issues. We introduce a novel visualization technique that gives insight into the function of intermediate feature layers and the operation of the classifier. Used in a diagnostic role, these visualizations allow us to find model architectures that outperform Krizhevsky et al on the ImageNet classification benchmark. We also perform an ablation study to discover the performance contribution from different model layers. We show our ImageNet model generalizes well to other datasets: when the softmax classifier is retrained, it convincingly beats the current state-of-the-art results on Caltech-101 and Caltech-256 datasets.",
+isbn="978-3-319-10590-1"
+}
+
